WebAPI/WebAPI/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: nginx-container  # Nginx container for serving web content.
        image: nginx  # The Docker image to use for the Nginx container.
        volumeMounts:
          - name: shared-data  # Mounts the 'shared-data' volume inside the Nginx container.
            mountPath: /usr/share/nginx/html  # The path where Nginx serves content.

      - name: ubuntu-container  # Ubuntu container for data manipulation.
        image: ubuntu  # The Docker image to use for the Ubuntu container.
        volumeMounts:
          - name: shared-data  # Mounts the 'shared-data' volume inside the Ubuntu container.
            mountPath: /pod-data  # The path within the Ubuntu container for working with shared data.
        command: ["/bin/sh"]  # Specifies the command to run within the Ubuntu container.
        args: ["-c", "echo 'Hello, World!!!' > /pod-data/index.html"]  # Command arguments to create an HTML file.
      volumes:
      - name: shared-data
        emptyDir: {}
