WebAPI/WebAPI/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-demo
spec:
  selector:
    matchLabels:
      app: webapp-demo
  replicas: 2 
  template: 
    metadata:
      labels:
        app: webapp-demo
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: workload-identity
      containers:
      - name: webapp-demo
        image: acr358.azurecr.io/webapp-demo:latest
        readinessProbe:
          # an http probe
          httpGet:
            path: /health/ready
            port: 5269
          # length of time to wait for a pod to initialize
          # after pod startup, before applying health checking
          initialDelaySeconds: 1
          periodSeconds: 10
          timeoutSeconds: 20
        startupProbe:
          # an http probe
          httpGet:
            path: /health/startup
            port: 5269
          failureThreshold: 5
          periodSeconds: 5
          timeoutSeconds: 10
        ports:
        - containerPort: 5269
