WebAPI/WebAPI/applepay-demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1  # Number of replicas of the nginx pod
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: workload-identity
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 5269
        volumeMounts:
        - name: apple-developer-merchantid-domain-association  # Name of the volume mount
          mountPath: /usr/share/nginx/html/.well-known  # Path to mount the volume
      volumes:
      - name: apple-developer-merchantid-domain-association
        hostPath:
          path: /cert  # Replace with the actual path on the host
          type: DirectoryOrCreate  # Ensures the .well-known directory is created if it doesn't exist
---
apiVersion: v1
kind: Service
metadata:
 name: applepay-demo
spec:
  ports:
  - port: 80
    targetPort: 5269
    protocol: TCP
    name: expose-proxyport
  sessionAffinity: None
  type: LoadBalancer
  selector:
    app: nginx
