WebAPI/WebAPI/k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-demo
spec:
  selector:
    matchLabels:
      app: webapp-demo
  replicas: 1 
  template: 
    metadata:
      labels:
        app: webapp-demo
    spec:
      containers:
      - name: webapp-demo
        image: acr358.azurecr.io/webapp-demo:latest
        readinessProbe:
          # an http probe
          httpGet:
            path: /health/ready
            port: 5269
          # length of time to wait for a pod to initialize
          # after pod startup, before applying health checking
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 1
        startupProbe:
          # an http probe
          httpGet:
            path: /health/startup
            port: 5269
          failureThreshold: 5
          periodSeconds: 5
        ports:
        - containerPort: 5269
        resources:
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
 name: webapp-demo
spec:
  ports:
  - port: 80
    targetPort: proxy-port
    protocol: TCP
    name: expose-proxyport
  sessionAffinity: None
  type: ClusterIP
  selector:
    app: webapp-demo
