WebAPI/WebAPI/service.yml
apiVersion: v1
kind: Service
metadata:
 name: webapp-demo
spec:
  ports:
  - port: 80
    targetPort: 5269
    protocol: TCP
    name: expose-proxyport
  selector:
    app: webapp-demo
