WebAPI/WebAPI/canaryingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-demo
  annotations:
    kubernetes.io/ingress.class: nginx-ingress
spec:
  rules:
  - host: 57.152.16.222.nip.io
    http:
      paths:
      - backend:
          service:
            name: webapp-demo
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
