WebAPI/WebAPI/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: host1.domain.ext
    http:
      paths:
      - backend:
          service:
            name: webapp-demo
            port:
              number: 80
        path: /
        pathType: Prefix
